Fix sonar issues in random order.